--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-_site/
-.sass-cache/
-.jekyll-cache/
+_site
+.sass-cache
+.jekyll-cache
 .jekyll-metadata
+vendor
+Gemfile.lock
+workspace.code-workspace
+.tweet-cache
